--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,23 @@
 
   <script async custom-element="amp-fx-flying-carpet" src="https://cdn.ampproject.org/v0/amp-fx-flying-carpet-0.1.js"></script>
 
+
+  <style amp-custom>
+    #section1{
+      background: #292929 fixed no-repeat 50% 50%;
+      background-image: url('../src/Assets/cv.jpg');
+      background-size: cover;
+    }
+    #section2{        
+        background-image: url('../src/Assets/google.png');
+        background-size: 20%;
+    }
+    #section3{
+        background-image: url('../src/Assets/js.png');
+        background-size: 20%;
+    }
+  </style>
+
 </head>
 
 <body >
