--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,32 @@
 <html ⚡ lang="en">
 
 <head>
+  <link rel="canonical" href="https://federicocrocecv.firebaseapp.com/index.html">
+  <link rel="manifest" href="/manifest.json">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <link rel="manifest" href="./manifest.json">
-  <link href="./src/registerServiceWorker.json">
 
+  
+  
+  <!-- <link rel="manifest" href="./manifest.json"> -->
+  <!-- <link href="./src/registerServiceWorker.json"> -->
 
-  <link rel="icon" type="image/png" size="128x128" href="./favicon.ico">
-  <link rel="shortcut icon" href="amp_favicon.png">
+  <!-- <link rel="icon" type="image/png" size="128x128" href="./favicon.ico"> -->
+  <!-- <link rel="shortcut icon" href="amp_favicon.png"> -->
 
   <title>CV Federico Croce</title>
 
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
- 
-<script async src="https://cdn.ampproject.org/v0.js"></script>
 
-<script async type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyCz6YGq-xBSjtIBWR3keBoLj45-rdXDFiI"></script>
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
+  <script async custom-element="amp-install-serviceworker"
+  src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
+
+  <!-- <script async src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyCz6YGq-xBSjtIBWR3keBoLj45-rdXDFiI"></script> -->
+
+  <!-- <script async src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script> -->
+  <!-- <script async src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script> -->
 
 
 
@@ -30,4 +37,5 @@
 <body>
   <div id="root"></div>
 </body>
+
 </html>
