--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
 
   <!-- <script async src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyCz6YGq-xBSjtIBWR3keBoLj45-rdXDFiI"></script> -->
 
-  <!-- <script async src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script> -->
-  <!-- <script async src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script> -->
+  <script  src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+  <script  src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
 
 
 
