--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
 <head>
   <link rel="canonical" href="https://federicocrocecv.firebaseapp.com/index.html">
   <link rel="manifest" href="/manifest.json">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+
   <meta charset="utf-8" />
+
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
   
@@ -18,6 +22,7 @@
   <title>CV Federico Croce</title>
 
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+  
 
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 
@@ -26,8 +31,8 @@
 
   <!-- <script async src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyCz6YGq-xBSjtIBWR3keBoLj45-rdXDFiI"></script> -->
 
-  <script  src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-  <script  src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
+  <!-- <script  src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+  <script  src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script> -->
 
 
 
