Test de optimizacion por la carga de firebase

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
 
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 
+  <script async src="../src/Config/firestoreInit.js"></script>
+
   <script async custom-element="amp-install-serviceworker"
   src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
 
@@ -44,12 +46,39 @@
   <!-- <script  src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
   <script  src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script> -->
 
+  <!-- <script async src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script> -->
 
+  <!-- <amp-iframe width=300 height=300
+  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+  var config = {
+    apiKey: "AIzaSyDINSbmIwTdqRE7yDhkow46fs3JxW5y8KM",
+    authDomain: "test-74eeb.firebaseapp.com",
+    databaseURL: "https://test-74eeb.firebaseio.com",
+    projectId: "test-74eeb",
+    storageBucket: "test-74eeb.appspot.com",
+    messagingSenderId: "984496005171"
+  };
+</amp-iframe> -->
 
+<!-- <script async custom-element="amp-iframe"
+  src="../src/Config/firestoreInit.js"></script> -->
+
+  <!-- <amp-iframe width="100"
+  title="Google map pin on Googleplex, Mountain View CA"
+  height="100"
+  layout="responsive"
+  sandbox="allow-scripts allow-same-origin allow-popups"
+  frameborder="0"
+  src="../src/Config/firestoreInit.js">
+</amp-iframe> -->
+
+ 
+<!-- firebase.initializeApp(config); -->
 
 </head>
 
 <body>
+  <h1>Prueba</h1>
   <div id="root"></div>
 </body>
 
